--- a/styles/global.css
+++ b/styles/global.css
@@ -139,12 +139,17 @@ nav {
 	border-bottom: 1px solid var(--red);
 	display: flex;
 	justify-content: flex-end;
-	gap: 80px;
 	position: relative;
 	--vertical-padding: var(--line-height-section_title);
+	/* ios 12 compatibility: gap not supported with flexbox and undetectable */
+	/* gap: 80px; */
+	--nav-items-gap: 80px;
 }
 #nav-menu li {
 	list-style: none;
+}
+#nav-menu > li:not(:first-child) {
+	margin-left: var(--nav-items-gap);
 }
 #nav-menu a {
 	font-size: var(--font-size-body);
@@ -184,7 +189,7 @@ nav {
 }
 @media (max-width: 850px) {
 	#nav-menu {
-		gap: var(--line-height-display);
+		--nav-items-gap: var(--line-height-display);
 	}
 	#nav-menu a {
 		font-size: 12px;
@@ -192,7 +197,7 @@ nav {
 }
 @media (max-width: 600px) {
 	#nav-menu {
-		gap: var(--line-height-large_body);
+		--nav-items-gap: var(--line-height-large_body);
 		--vertical-padding: var(--line-height-large_body);
 	}
 }
@@ -207,7 +212,7 @@ footer {
 	max-height: calc(12 * var(--line-height-display));
 	box-sizing: border-box;
 	align-items: end;
-	padding-bottom: calc(var(--decoration-margin) * 2 + var(--decoration-size));
+	/* padding-bottom: calc(var(--decoration-margin) * 2 + var(--decoration-size)); */
 }
 footer > * {
 	grid-column: content-left / content-right;
@@ -228,11 +233,17 @@ footer #footer-links {
 
 	padding-bottom: var(--bottom-line-padding);
 	border-bottom: 1px solid var(--black);
+
+	/* for some reason this works on ios 12 but not padding-bottom on footer */
+	margin-bottom: calc(var(--decoration-margin) * 2 + var(--decoration-size));
 }
 footer #contact-links {
 	display: flex;
-	gap: 30px;
 	list-style: none;
+	/* gap: 30px; */
+}
+footer #contact-links > *:not(:first-child) {
+	margin-left: 30px;
 }
 footer #contact-links a {
 	font-size: var(--font-size-body);
@@ -256,7 +267,10 @@ footer small {
 		justify-content: center;
 	}
 	footer #footer-links {
-		gap: 60px;
+		/* gap: 60px; */
+	}
+	footer #footer-links > *:not(:first-child) {
+		margin-top: 60px;
 	}
 }
 @media (max-width: 850px) and (min-height: 500px) {
@@ -264,6 +278,10 @@ footer small {
 	footer #contact-links {
 		align-items: center;
 		flex-direction: column;
+	}
+	footer #contact-links > *:not(:first-child) {
+		margin-top: 30px;
+		margin-left: 0;
 	}
 }
 
@@ -274,6 +292,7 @@ main {
 	z-index: 1;
 }
 footer {
+	position: relative; /* fallback if sticky not supported (e.g. ios 12) */
 	position: sticky;
 	bottom: 0;
 }
@@ -299,7 +318,7 @@ footer small::after {
 	left: 50%;
 	transform: translateX(-50%);
 	width: calc(4 * var(--decoration-size));
-	z-index: -1;
+/*	z-index: -1;*/
 	background: linear-gradient(to right, var(--colour-1) 25%, var(--colour-2) 25%, var(--colour-2) 50%, var(--colour-3) 50%, var(--colour-3) 75%, var(--colour-4) 75%);
 }
 footer::after, footer::before {
